// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse renders correctly 1`] = `
<div
  class="zs-collapse"
>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item1
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item1.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item2
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item2.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item3
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item3.
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse renders correctly with activeKey 1`] = `
<div
  class="zs-collapse"
>
  <div
    class="zs-collapse-item zs-collapse-item--active"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item1
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item1.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item2
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item2.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item3
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item3.
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse renders correctly with animated 1`] = `
<div
  class="zs-collapse zs-collapse--animated"
>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item1
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item1.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item2
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item2.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item3
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item3.
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse renders correctly with array defaultActiveKey 1`] = `
<div
  class="zs-collapse"
  multiple=""
>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item1
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item1.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item zs-collapse-item--active"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item2
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item2.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item3
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item3.
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse renders correctly with collapse mode 1`] = `
<div
  class="zs-collapse"
  multiple=""
>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item1
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item1.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item2
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item2.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item3
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item3.
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse renders correctly with defaultActiveKey 1`] = `
<div
  class="zs-collapse"
>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item1
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item1.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item zs-collapse-item--active"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item2
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item2.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item3
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item3.
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse renders correctly with number activeKey 1`] = `
<div
  class="zs-collapse"
>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item1
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item1.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item2
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item2.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item3
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item3.
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse renders correctly with number defaultActiveKey 1`] = `
<div
  class="zs-collapse"
>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item1
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item1.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item2
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item2.
      </div>
    </div>
  </div>
  <div
    class="zs-collapse-item"
  >
    <div
      class="zs-collapse-item__header"
    >
      <div
        class="zs-collapse-item__title"
      >
        Header of Item3
      </div>
      <div
        class="zs-collapse-item__arrow"
      />
    </div>
    <div
      class="zs-collapse-item__content"
    >
      <div
        class="zs-collapse-item__content__inner"
      >
        This is content of item3.
      </div>
    </div>
  </div>
</div>
`;
